Fixes
Google made some front-end changes, resolved the issues that cropped up
as a result

--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -1,6 +1,6 @@
 /* Colour Replace */
 
-#material-app-bar, sj-paper-button.material-primary, paper-button.material-primary, .material-container-details sj-fab,
+#material-app-bar, sj-paper-button.material-primary, paper-button.material-primary, .material-container-details paper-fab,
 .material-container-details paper-fab, #current-loading-progress, paper-slider::shadow #sliderBar::shadow #activeProgress,
 paper-slider::shadow #sliderKnobInner, .button.primary, .simple-dialog-buttons button.goog-buttonset-default, .button.primary:focus,
 .button.primary:hover, .simple-dialog-buttons button.goog-buttonset-default:hover, .simple-dialog-buttons button.goog-buttonset-default:focus,
@@ -8,8 +8,8 @@ paper-slider::shadow #sliderKnobInner, .button.primary, .simple-dialog-buttons b
     background-color: #7876D0 !important
 }
 
-.nav-item-container.selected, .nav-item-container.selected core-icon, .nav-item-container.selected iron-icon, .cluster.material-cluster
-.lane-button core-icon, .cluster.material-cluster .lane-button iron-icon, #player.material .material-player-middle sj-icon-button[data-id="play-pause"]:not([disabled]),
+.nav-item-container.selected, .nav-item-container.selected iron-icon, .nav-item-container.selected iron-icon, .cluster.material-cluster
+.lane-button iron-icon, .cluster.material-cluster .lane-button iron-icon, #player.material .material-player-middle sj-icon-button[data-id="play-pause"]:not([disabled]),
 #player.material .material-player-middle paper-icon-button[data-id="play-pause"]:not([disabled]), .upload-dialog-dragover .upload-dialog-description {
     color: #7876D0 !important
 }
@@ -24,6 +24,7 @@ paper-slider::shadow #sliderKnobInner, .button.primary, .simple-dialog-buttons b
 }
 
 /* Listen Now */
+
 
 [data-is-radio="true"] .reason {
     display: none !important;
@@ -179,7 +180,7 @@ paper-slider::shadow #sliderKnobInner, .button.primary, .simple-dialog-buttons b
 
 /* Content Pages */
 
-.material-container-details .actions sj-paper-button, .material-container-details .actions sj-icon-button {
+.material-container-details .actions paper-button, .material-container-details .actions icon-button {
     display: none !important;
 }
 
@@ -188,13 +189,13 @@ paper-slider::shadow #sliderKnobInner, .button.primary, .simple-dialog-buttons b
     margin-bottom: -30px;
 }
 
-sj-fab[data-id="radio"] {
+paper-fab[data-id="radio"] {
     margin-right: 68px;
     padding-left: 15px;
     background-color: #D10438 !important;
 }
 
-sj-fab[data-id="share-artist"] {
+paper-fab[data-id="share-artist"] {
     margin-right: -28px;
     margin-top: 28px;
     padding-left: 14px;
@@ -237,12 +238,21 @@ core-header-panel#content-container.transparent #material-app-bar, paper-header-
 
 /* Sidebar */
 
+#main {
+	left: 240px !important;
+} 
+
+.left-drawer.narrow-layout.paper-drawer-panel > #drawer.paper-drawer-panel:not(.iron-selected) {
+	-webkit-transform: none !important;
+    transform: none !important;
+}
+
 .menu-logo {
     margin: 0 0 0 30px !important;
 }
 
-sj-icon-button#left-nav-close-button {
-    display: none;
+#left-nav-close-button {
+    display: none !important;
 }
 
 a.nav-item-container.tooltip.sub,a#shop-nav,[data-action="upload-music"] {
@@ -263,7 +273,7 @@ a.nav-item-container.tooltip.sub,a#shop-nav,[data-action="upload-music"] {
     display: none;
 }
 
-#auto-playlists .nav-item-container core-icon {
+#auto-playlists .nav-item-container iron-icon {
     margin: 3px 0 0 6px;
 }
 
@@ -277,7 +287,7 @@ a.nav-item-container.tooltip.sub,a#shop-nav,[data-action="upload-music"] {
     display: inline-block;
 }
 
-#auto-playlists-header {
+#header-0 {
     line-height: 46px !important;
     display: inline-block;
 }
@@ -313,3 +323,64 @@ a.nav-item-container.tooltip.sub,a#shop-nav,[data-action="upload-music"] {
 {
     background-color: rgba(85, 85, 85, 0.3);
 }
+
+/*
+
+.material .song-row.selected-song-row .song-indicator, .material .song-row.selected-song-row .title-right-items, .material .song-row.selected-song-row .content, .material .song-row.selected-song-row .song-indicator[data-playback-status="paused"], .material .song-row.selected-song-row .song-indicator[data-playback-status="loading"], .material .song-row.selected-song-row [data-col="index"] .hover-button[data-id="play"], .material .song-row.selected-song-row [data-col="track"] .hover-button[data-id="play"] {
+    background-color: transparent !important;
+}
+
+.material .song-row.selected-song-row td {
+    background-color: rgba(245, 245, 245, 0.3) !important;
+}
+
+.songlist-container {
+    background-color: rgba(255, 255, 255, 0.7) !important;
+}
+
+.material .song-row td, .material .upload-progress-row td {
+    background-color: rgba(255, 255, 255, 0.7) !important;
+}
+
+.material .song-row .song-indicator, .material .song-row .title-right-items, .material .song-row .content, .material .song-row .song-indicator[data-playback-status="paused"], .material .song-row .song-indicator[data-playback-status="loading"], .material .song-row [data-col="index"] .hover-button[data-id="play"], .material .song-row [data-col="track"] .hover-button[data-id="play"] {
+    background-color: transparent !important;
+}
+
+.material .song-row.hover .song-indicator, .material .song-row.hover .title-right-items, .material .song-row.hover .content, .material .song-row.hover .song-indicator[data-playback-status="paused"], .material .song-row.hover .song-indicator[data-playback-status="loading"], .material .song-row.hover [data-col="index"] .hover-button[data-id="play"], .material .song-row.hover [data-col="track"] .hover-button[data-id="play"] {
+    background-color: transparent !important;
+}
+
+.song-row.hover .fade-out:after {
+    background: transparent !important;
+}
+
+.song-row.selected-song-row .fade-out:after {
+    background: transparent !important;
+}
+
+.song-row .fade-out:after {
+    background: transparent !important;
+}
+
+.material .song-row td, .material .upload-progress-row td {
+    background-color: transparent !important;
+}
+
+.material .cluster-text-protection {
+    background-color: transparent !important;
+}
+
+.material .cluster-text-protection::before {
+    background: transparent !important;
+}
+
+.screensaver {
+    -moz-opacity: 0 !important;
+    opacity: 1 !important;
+    filter: alpha(opacity=0) !important;
+    z-index: 1500 !important;
+    position: absolute !important;
+    overflow: hidden !important;
+    transition: opacity 0.8s ease-in-out !important;
+    z-index: -1 !important;
+}*/
